# FmtExample

./: .gitignore  FmtExample.cabal  README.md
app/: Main.hs
src/: FmtMain.hs
